syntax = "proto3";


message SimpleSupplyPayload{
    enum Action {
        CREATE_AGENT = 0;
        CREATE_RECORD = 1;
        UPDATE_RECORD = 2;
        TRANSFER_RECORD = 3;
    }

    Action action = 1;

    CreateAgentAction create_agent = 2;
    CreateRecordAction create_record = 3;
    UpdateRecordAction update_record = 4;
    TransferRecordAction transfer_record = 5;

    uint64 timestamp = 6;
}


message CreateAgentAction {
    string name = 1;
}


message CreateRecordAction {
    string record_id = 1;

    sint64 latitude = 2;
    sint64 longitude = 3;
}


message UpdateRecordAction {
    string record_id = 1;

    sint64 latitude = 2;
    sint64 longitude = 3;
}


message TransferRecordAction {
    string record_id = 1;

    string receiving_agent = 2;
}
